Update: validación de saveUser y se agregó la configuración centralizada